--- a/html.html
+++ b/html.html
@@ -23,7 +23,7 @@
               <div class="flip-box-back">
                 <p><b>"Intro: Jane" (with FKJ)</b></p>
                 <p> 8/10</p>
-                <p style="text-align: justify;"> A perfect intro for an album. A dark fairytale vibe, the melodies are so good they could be made into a ringtone or alarm!</p>
+                <p class="p3" style="font-size: 14px;"> A perfect intro for an album. A dark fairytale vibe, the melodies are so good they could be made into a ringtone or alarm!</p>
               </div>
             </div>
           </div>
@@ -36,7 +36,7 @@
               <div class="flip-box-back">
                 <p><b>	"Like Jennie"</b></p>
                 <p> 10/10</p>
-                <p style="text-align: justify;"> Slayed, no doubt! The choreography, lyrics, and rap— everything!
+                <p class="p3"> Slayed, no doubt! The choreography, lyrics, and rap— everything!
                   NO ONE REALLY DOES IT LIKE JENNIE!</p>
               </div>
             </div>
@@ -50,7 +50,7 @@
               <div class="flip-box-back">
                 <p><b style="font-size: 15px;">"Start a War"</b></p>
                 <p> 8/10</p>
-                <p style="text-align: justify; font-size: 15px;"> The perfect song to give to your loved one!
+                <p class="p3" style="font-size: 15px; "> The perfect song to give to your loved one!
                   The boldness and confidence Jennie portrayed in the lyrics were so like her.
                   Honestly, this whole album revolves around her.</p>
               </div>
@@ -65,7 +65,7 @@
               <div class="flip-box-back">
                 <p><b>"Handlebars" (featuring Dua Lipa)</b></p>
                 <p> 9/10</p>
-                <p style="text-align: justify;"> Addicting and a strong combo! Their voices blend so well. Another collab set to be a hit!</p>
+                <p class="p3"> Addicting and a strong combo! Their voices blend so well. Another collab set to be a hit!</p>
               </div>
             </div>
           </div>
@@ -78,7 +78,7 @@
               <div class="flip-box-back">
                 <p><b>"With the IE (Way Up)"</b></p>
                 <p> 10/10</p>
-                <p style="text-align: justify;"> its JennIE! A name that will go down in history!</p>
+                <p class="p3"> its JennIE! A name that will go down in history!</p>
               </div>
             </div>
           </div>
@@ -91,7 +91,7 @@
               <div class="flip-box-back">
                 <p><b>	"ExtraL" (featuring Doechii)</b></p>
                 <p> 10/10</p>
-                <p style="text-align: justify;"> ICONIC. Delivered and served perfectly! A powerful song performed by powerful women. </p>
+                <p class="p3"> ICONIC. Delivered and served perfectly! A powerful song performed by powerful women. </p>
               </div>
             </div>
           </div>
@@ -104,7 +104,7 @@
               <div class="flip-box-back">
                 <p><b>"Mantra"</b></p>
                 <p> 100/10</p>
-                <p style="text-align: justify;"> Queen Slayed. What comes next after 7? ATE!</p>
+                <p class="p3"> Queen Slayed. What comes next after 7? ATE!</p>
               </div>
             </div>
           </div>
@@ -117,7 +117,7 @@
               <div class="flip-box-back">
                 <p><b>"Love Hangover"</b></p>
                 <p> 100/10</p>
-                <p style="text-align: justify;"> Marupok but still slayed! The MV is so chaotic—it's fun! Dominic’s rapping was so addicting, blending perfectly with Jennie’s singing. SO ADDICTING!</p>
+                <p class="p3" style="font-size: 14px;"> Marupok but still slayed! The MV is so chaotic—it's fun! Dominic’s rapping was so addicting, blending perfectly with Jennie’s singing. SO ADDICTING!</p>
               </div>
             </div>
           </div>
@@ -130,7 +130,7 @@
               <div class="flip-box-back">
                 <p><b>	"Zen"</b></p>
                 <p> ∞/10</p>
-                <p style="text-align: justify;"> The costumes, the theme, the music—everything in between. It's a masterpiece to behold!</p>
+                <p class="p3"> The costumes, the theme, the music—everything in between. It's a masterpiece to behold!</p>
               </div>
             </div>
           </div>
@@ -143,7 +143,7 @@
               <div class="flip-box-back">
                 <p><b style="font-size: 15px;">	"Damn Right" (featuring Childish Gambino and Kali Uchis)</b></p>
                 <p> 8/10</p>
-                <p style="text-align: justify;"> Yes, it’s damn right! The vibe is vibing! It feels like you’re levitating as soon as this song starts.</p>
+                <p class="p3"> Yes, it’s damn right! The vibe is vibing! It feels like you’re levitating as soon as this song starts.</p>
               </div>
             </div>
           </div>
@@ -156,7 +156,7 @@
               <div class="flip-box-back">
                 <p><b>	"F.T.S."</b></p>
                 <p> 8/10</p>
-                <p style="text-align: justify;"> Louder!! "What happened to freedom and honesty?" — The title was just right.</p>
+                <p class="p3"> Louder!! "What happened to freedom and honesty?" — The title was just right.</p>
               </div>
             </div>
           </div>
@@ -169,7 +169,7 @@
               <div class="flip-box-back">
                 <p><b>"Filter"</b></p>
                 <p> 10/10</p>
-                <p style="text-align: justify;"> A beauty inside and out. The confidence was clear—
+                <p class="p3"> A beauty inside and out. The confidence was clear—
                   well, she deserves to act like one.</p>
               </div>
             </div>
@@ -183,7 +183,7 @@
               <div class="flip-box-back">
                 <p><b>	"Seoul City"</b></p>
                 <p> 10/10</p>
-                <p style="text-align: justify;"> A mesmerizing and addictive song. A mysterious vibe along with an angelic voice? A perfect combo!</p>
+                <p class="p3"> A mesmerizing and addictive song. A mysterious vibe along with an angelic voice? A perfect combo!</p>
               </div>
             </div>
           </div>
@@ -196,7 +196,7 @@
               <div class="flip-box-back">
                 <p><b>"Starlight"</b></p>
                 <p> ∞/10</p>
-                <p style="text-align: justify;"> A magical and dreamy feeling. This song will cleanse your soul with its beauty.</p>
+                <p class="p3"> A magical and dreamy feeling. This song will cleanse your soul with its beauty.</p>
               </div>
             </div>
           </div>
@@ -209,7 +209,7 @@
               <div class="flip-box-back">
                 <p><b>	"Twin"</b></p>
                 <p> 	∞/10</p>
-                <p style="text-align: justify;"> Who hurt this queen? This song is well-made and deserves a lot of recognition and praise! This song is on repeat all day, 24/7! </p>
+                <p class="p3"> Who hurt this queen? This song is well-made and deserves a lot of recognition and praise! This song is on repeat all day, 24/7! </p>
               </div>
             </div>
           </div>
