--- a/html.html
+++ b/html.html
@@ -60,7 +60,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <img src="ruby.jpg" alt="Front Image">
+                <img src="handlebar.jpg" alt="Front Image">
               </div>
               <div class="flip-box-back">
                 <p><b>"Handlebars" (featuring Dua Lipa)</b></p>
